--- a/assignments/labAssignment1.ipynb
+++ b/assignments/labAssignment1.ipynb
@@ -27,29 +27,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
-      "metadata": {
-        "id": "JUQi5CFCIP0k",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "4a654eb9-c1ad-4dca-cedd-d711b3df5fca"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Cloning into 'musicComputing2026'...\n",
-            "remote: Enumerating objects: 74, done.\u001b[K\n",
-            "remote: Counting objects: 100% (74/74), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (69/69), done.\u001b[K\n",
-            "remote: Total 74 (delta 31), reused 7 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (74/74), 10.95 MiB | 17.52 MiB/s, done.\n",
-            "Resolving deltas: 100% (31/31), done.\n"
-          ]
-        }
-      ],
       "source": [
         "# 1) Start by importing the necessary libraries in the first cell of the notebook\n",
         "# numpy\n",
@@ -58,65 +35,67 @@
         "\n",
         "# librosa\n",
         "\n",
-        "#import audio files\n",
         "\n",
+        "#import audio files\n",
+        "!git clone https://github.com/jcdevaney/musicComputing2026.git\n",
         "\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import librosa\n",
-        "import librosa.display\n",
-        "\n",
-        "!git clone https://github.com/jcdevaney/musicComputing2026.git\n",
-        "\n"
+        "import librosa.display\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JwqsDzXGqS2H",
+        "outputId": "5a6fe3ab-7a83-4453-da48-fee2c9e99ce5"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: destination path 'musicComputing2026' already exists and is not an empty directory.\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# 2) Create a function that inputs the name of an audio file and a sampling rate\n",
+        "\n",
+        " # 2) Create a function that inputs the name of an audio file and a sampling rate\n",
         "\n",
         "def plotAudio(file,samplingRate):\n",
-        "\n",
         "  sig, sr = librosa.load(file, sr=samplingRate, mono=True)\n",
         "\n",
-        "\n",
+        "    # Create time axis (seconds)\n",
         "  time = np.arange(0, sig.shape[0]) / sr\n",
         "\n",
-        "\n",
+        "    # Normalize signal (optional but clean)\n",
         "  excursion = max(abs(sig))\n",
         "  sigNew = sig / excursion\n",
         "  print(\"Max amplitude before normalization:\", excursion)\n",
         "\n",
-        "\n",
+        "    # Axis labels\n",
         "  xlabel = \"Time (seconds)\"\n",
         "  ylabel = \"Amplitude\"\n",
         "\n",
-        "\n",
+        "    # Plot\n",
         "  plt.figure()\n",
         "  plt.plot(time, sigNew)\n",
         "  plt.xlabel(xlabel)\n",
         "  plt.ylabel(ylabel)\n",
         "  plt.title(\"Normalized Waveform\")\n",
         "  plt.axis('tight')\n",
-        "  plt.show()\n",
-        "\n",
-        "  # In the function you should use librosa.load() to open the specified filename\n",
-        "  # with the specified sampling rate\n",
-        "\n",
-        "\n",
-        "  # Use variables for the x- and y-labels\n",
-        "\n",
-        "\n",
-        "  # The function should plot the time-domain (waveform) representation of the\n",
-        "  # audio signal with time in seconds on the x-axis and amplitude on the y-axis\n",
-        "\n",
-        "\n",
-        "  # Plot the signal\n"
+        "  plt.show()"
       ],
       "metadata": {
-        "id": "L66xJtpHwLCN"
+        "id": "ZkiHHzvno6N5"
       },
-      "execution_count": 12,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -127,20 +106,17 @@
         "\n",
         "file = '/content/musicComputing2026/audioFiles/avm.wav'\n",
         "samplingRate=44100\n",
-        "plotAudio(file,samplingRate)\n",
-        "\n",
-        "sig, sr = librosa.load(file)\n",
-        "\n"
+        "plotAudio(file,samplingRate)"
       ],
       "metadata": {
-        "id": "dUpKDEPMw57F",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 460
+          "height": 489
         },
-        "outputId": "e06ae85e-098b-4a02-ca14-1944f7a2aecc"
+        "id": "h-4468lhqdwd",
+        "outputId": "ab62849d-3d01-4270-8e12-3165022217cb"
       },
-      "execution_count": 15,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,19 +140,22 @@
     {
       "cell_type": "code",
       "source": [
+        "#4) Second use ‘avm.wav’ as the filename with a sampling rate of 441\n",
+        "\n",
         "file = '/content/musicComputing2026/audioFiles/avm.wav'\n",
         "samplingRate = 441\n",
+        "\n",
         "plotAudio(file, samplingRate)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 460
+          "height": 489
         },
-        "id": "xJCrEAqAkx65",
-        "outputId": "94d24c92-ca9d-4777-bd1c-0572fe3baee7"
+        "id": "n5FeKAWLqhzm",
+        "outputId": "ff50b990-415b-4031-9568-71440f984b43"
       },
-      "execution_count": 16,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,18 +175,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Second use ‘avm.wav’ as the filename with a sampling rate of 441\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "PV9__PiGxCqJ"
-      },
-      "execution_count": 5,
-      "outputs": []
     }
   ]
 }
